tyring to fix footer on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,6 @@
 .app-container {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
     display: flex; 
     flex-direction: column;
@@ -13,6 +13,9 @@
     width: 100%;
     min-height: 56px !important;
     box-sizing: border-box;
+    position: fixed;
+    left: 0;
+    top: 0;
 }
 
 #content {
@@ -21,6 +24,13 @@
     overflow-y: auto;
     overflow-x: hidden;
     color: #403d37;
+
+    padding: 12px 0;
+    position: fixed;
+    top: 56px;
+    bottom: 72px;
+    right: 0;
+    left: 0;
 }
 
 .section { 
@@ -72,7 +82,11 @@
     bottom: 0px;
     background-color: #fffff2;
     box-sizing: border-box;
-    position: relative;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 72px;
 }
 
 #rights-reserved {
